// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast Widget SelfServiceFlowSelect should render SelfServiceFlowSelect field 1`] = `
<InputField
  caseInsensitive={false}
  inline={false}
  onChange={[Function]}
  placeholder=""
  required={false}
  type="text"
  value="flow"
/>
`;

exports[`ast Widget TagsSelect should render case sensitive TagsSelect field (tags properties) 1`] = `
<Connect(TagsSelectContainer)
  caseInsensitive={false}
  deprecatedOptions={Array []}
  description="Name of the tag. Keep it simple, a short 1 word tag is the best. The tag names are case sensitive."
  hiddenOptions={Array []}
  multiple={true}
  onChange={[Function]}
  options={Array []}
  type="tags-select"
  value="tag"
/>
`;

exports[`ast Widget TagsSelect should render component AssigneeTeamSelect 1`] = `
<Connect(AssigneeTeamSelectContainer)
  allowUnassign={false}
  description=""
  onChange={[Function]}
  options={Array []}
  type="assignee_team-select"
/>
`;

exports[`ast Widget TagsSelect should render component AssigneeUserSelect 1`] = `
<Connect(AssigneeUserSelectContainer)
  allowUnassign={false}
  description=""
  onChange={[Function]}
  options={Array []}
  type="assignee_user-select"
/>
`;

exports[`ast Widget TagsSelect should render multi TagsSelect field (addTags action) 1`] = `
<Connect(TagsSelectContainer)
  caseInsensitive={false}
  description=""
  multiple={true}
  onChange={[Function]}
  options={Array []}
  type="tags-select"
  value="hello, world, !"
/>
`;

exports[`ast Widget should render DatetimeSelect field 1`] = `
<div
  className="widget d-inline-block"
>
  <DatePicker
    initialSettings={
      Object {
        "endDate": "2018-03-29T04:59:32.580Z",
        "startDate": "2018-03-29T04:59:32.580Z",
      }
    }
    onSubmit={[Function]}
  >
    <div>
      <Input
        placeholder="Choose a date..."
        type="text"
        value="03/28/2018 9:59 PM"
      />
    </div>
  </DatePicker>
</div>
`;

exports[`ast Widget should render InputField (eq operator) 1`] = `
<InputField
  caseInsensitive={false}
  inline={false}
  onChange={[Function]}
  placeholder=""
  required={false}
  type="text"
  value="hello world!"
/>
`;

exports[`ast Widget should render RichFieldWithVariables 1`] = `
<DEPRECATED_RichFieldWithVariables
  allowExternalChanges={true}
  isRequired={false}
  onChange={[Function]}
  placeholder=""
  value={
    Object {
      "html": "hello my good lad",
      "text": "foo bar",
    }
  }
  variableTypes={
    Array [
      "current_user",
      "ticket.customer",
      "shopify",
      "recharge",
      "magento2",
    ]
  }
/>
`;

exports[`ast Widget should render TimedeltaSelect field 1`] = `
<div
  className="widget d-inline-block"
>
  <TimedeltaPicker
    className="timedeltaPicker"
    min={1}
    onChange={[Function]}
    value="1d"
  />
</div>
`;

exports[`ast Widget should render case-insensitive MultiSelectField (containsAll operator) 1`] = `
<MultiSelectField
  allowCustomValues={true}
  caseInsensitive={true}
  className=" Text"
  onChange={[Function]}
  options={Array []}
  plural="words"
  singular="word"
  values={
    Array [
      "hello",
      "world!",
    ]
  }
/>
`;
